--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,40 @@
 body{
-	margin: 10px;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background: #00FF00;
+}
+#box{
+	width: 400px;
+	padding: 50px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background: #00FFFF;
+	text-align: center;
+}
+#box input[type = "text"],#box input[type = "key"]{
+	border:0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border:2px solid #DC143C;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: black;
+	border-radius: 24px;
+	transition: 0,25s;
+}
+#box input[type = "text"]:focus,#box input[type = "key"]:focus{
+	width: 280px; 
+	border-color:#DC143C;
+
+}
+h1{
+	color:crimson;
+	text-transform: uppercase;
+	font-weight: 500;
 }
