--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,30 @@ h1{
 	text-transform: uppercase;
 	font-weight: 500;
 }
+#btn{
+border:0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border:2px solid #DC143C;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: solid black;
+	border-radius: 24px;
+	transition: 0,25s;
+}
+#output{
+	border:0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border:2px solid #DC143C;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: black;
+	border-radius: 24px;
+}
