--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ border:0;
 	text-align: center;
 	border:2px solid #DC143C;
 	padding: 14px 10px;
-	width: 200px;
+	width: auto;
 	outline: none;
 	color: black;
 	border-radius: 24px;
